--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -231,7 +231,7 @@
         which has a low prediction error but is not overly complex, 
         than a complex model with a slightly lower prediction error.
         This not only helps to avoid overfitting, but also ensures that the \gls{MPC} optimisation problem 
-        is not too computational expensive for the available hardware.
+        is not too computational intensive for the available hardware.
         However, these scores require the computation of the maximum log likelihood of each model 
         over numerous simulations.
         This is computationally intractable and unpractical for our use case because of the large number of hyperparameter combinations to compare, as explained in Section~\ref{sec:hyperparameters}.
