--- a/system_id/white_black_box.tex
+++ b/system_id/white_black_box.tex
@@ -99,7 +99,7 @@
         The control architectures used for multirotors in practical applications are mostly implemented on onboard hardware.
         Therefore there is value in low-complexity, linear models because these may be simple enough to execute on low cost hardware.
         % trade-off between accuracy and complexity.??
-        Non-linear models may require control implementations that are too computationally expensive and may not be practically realisable on the available hardware on a multirotor.
+        Non-linear models may require control implementations that are too computationally intensive and may not be practically realisable on the available hardware on a multirotor.
         
         \paragraph
         \gls{DMDc} and \gls{HAVOKc} are the two data-driven system identification methods investigated in this work. 
