--- a/glossary.tex
+++ b/glossary.tex
@@ -71,6 +71,8 @@
 \newacronym{RRT}{RRT}{Rapidly-exploring Random Tree}
 \newacronym{BFBEL}{BFBEL}{Bidirectional Fuzzy Brain Emotional Learning}
 \newacronym{H-inf}{$\mathscr{H}_\infty$}{H-Infinity}
+\newacronym{RISE}{RISE}{Robust Integral of the Sign of the Error}
+\newacronym{SMC}{SMC}{Sliding Mode Control}
 
 
 % \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
