--- a/control/mpc.tex
+++ b/control/mpc.tex
@@ -383,9 +383,9 @@
 
         \paragraph
         An \gls{MPC} can easily be tuned for a range of different design requirements.
-        The same general design requirements will be applied to the \gls{MPC} as to the LQR in Section~\ref{sec:lqr}, namely,
+        The same general design requirements will be applied to the \gls{MPC} as to the \gls{LQR} in Section~\ref{sec:lqr}, namely,
         to produce a fast velocity response with zero steady-state error while damping the payload oscillations quickly.
-        The \gls{MPC} is firstly tuned to have a similar response time to the LQR so that the controller performances can be roughly compared.
+        The \gls{MPC} is firstly tuned to have a similar response time to the \gls{LQR} so that the controller performances can be roughly compared.
         Thereafter, it is tuned to produce a trajectory that is as smooth as possible.
 
         \paragraph
