--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -597,7 +597,7 @@ Finally, the mathematical models will be verified against practical flight data 
     %     \paragraph
     %     The dynamical equations derived in previous sections present a non-linear model of the quadrotor-payload system.
     %     However, a linearised state-space model of this system is required for \gls{LQR} control, which will be discussed in Section~\ref{sec:lqr}.
-    %     The LQR controller and linear model derived by \cite{Slabber2020} will be discussed in this section and used in this work.
+    %     The \gls{LQR} controller and linear model derived by \cite{Slabber2020} will be discussed in this section and used in this work.
     %     This controller is used for North velocity control of a quadrotor with a suspended payload.
 
     %     \begin{figure}[htb]
